Manage new folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-tomato_allergies/data
 food_database/data
 food_database/__pycache__
+tomato_allergies/data
+tomato_allergies/__pycache__
+tomato_allergies/constants.py
+tomato_allergies/tomato_detection.py
