--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ food_database/data
 food_database/__pycache__
 tomato_allergies/data
 tomato_allergies/__pycache__
-tomato_allergies/tomato_detection.py
+tomato_allergies/readme
