--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ food_database/data
 food_database/__pycache__
 tomato_allergies/data
 tomato_allergies/__pycache__
-tomato_allergies/readme
+tomato_allergies/models
+tomato_allergies/command.txt
